fix map link color. Make images not overflow map speech bubble box

--- a/layouts/css/page-modules/_events.styl
+++ b/layouts/css/page-modules/_events.styl
@@ -4,8 +4,17 @@
     margin-top 20px
 
     .marker-image img
+        width 100%
         max-width 320px
         max-height 100px
+
+    .marker-title a
+        color $node-green
+        text-decoration none
+        &:hover
+            color $white
+            background $node-green
+
 
 .events-map-key
     padding 8px 0
